@@ -740,6 +740,9 @@ Trunk (unreleased changes)
     HADOOP-5899. Move a log message in FSEditLog to the right place for
     avoiding unnecessary log.  (Suresh Srinivas via szetszwo)
 
+    HADOOP-5944. Add Apache license header to BlockManager.java.  (Suresh
+    Srinivas via szetszwo)
+
 Release 0.20.1 - Unreleased
 
   INCOMPATIBLE CHANGES
